# keytrap

./: .leakguard.example.yml  README.md  action.yml  benchmark.py  benchmark_compare.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/leak_guard/: __init__.py  __main__.py  cli.py  custom.py  reporter.py  scanner.py
tests/: test_patterns.py
