[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leak-guard"
version = "0.2.0"
description = "Fast, lightweight, extensible secret detection. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["security", "secret-detection", "pre-commit", "git", "leak", "credentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
leak-guard = "leak_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leak_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/cobyoo/leak-guard"
Repository = "https://github.com/cobyoo/leak-guard"
Issues = "https://github.com/cobyoo/leak-guard/issues"
